--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,8 +4,8 @@
   <%= devise_error_messages! %>
 
   <div class='field'>
-    <%= f.label :username %>
-    <%= f.text_field :username %>
+    <%= f.label :username %><br />
+    <%= f.text_field :username, autocomplete: "username" %>
   </div>
 
   <div class="field">
@@ -29,6 +29,7 @@
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
+
 <% end %>
 
 <%= render "devise/shared/links" %>
